--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,8 +12,7 @@ commands:
           name: Ensure artifacts directory is present
       - run: NODE_ENV=production npm run build
       - run: cp -r build artifacts
-      - store_artifacts:
-        path: /artifacts/build
+      - store_artifacts: /artifacts/build
 
   install:
     description: |
