--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,6 @@ commands:
           name: Ensure artifacts directory is present
       - run: NODE_ENV=production npm run build
       - run: cp -r build artifacts
-      - store_artifacts: /artifacts/build
 
   install:
     description: |
@@ -39,7 +38,9 @@ jobs:
       - install
       - test
       - build
-        
+      - store_artifacts:
+        path: /artifacts/build
+
 workflows:
   build:
     jobs:
