--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,15 +8,15 @@ commands:
       Create a production build
     steps:
       - run:
-          command: mkdir -p artifacts
+          command: mkdir -p /tmp/artifacts
           name: Ensure artifacts directory is present
       - run:
           command: pwd
           name: where am i?
       - run: NODE_ENV=production npm run build
-      - run: cp -r build artifacts
+      - run: cp -r ./build /tmp/artifacts
       - store_artifacts:
-          path: /artifacts
+          path: /tmp/artifacts
 
   install:
     description: |
