--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,6 +43,10 @@ jobs:
       - install
       - test
       - build
+      - save_cache:
+          key: m2-{{ checksum "package-lock.json" }}
+          paths:
+            - node_modules
 
 workflows:
   build:
