--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ commands:
     description: |
       Install dependencies
     steps:
-      - run: npm install
+      - run: npm ci
 
   test:
     description: |
@@ -37,17 +37,9 @@ jobs:
       - image: circleci/node:14-browsers
     steps:
       - checkout
-      - restore_cache:
-          keys:
-            - m2-{{ checksum "package-lock.json" }}
       - install
       - test
       - build
-      - save_cache:
-          key: m2-{{ checksum "package-lock.json" }}
-          paths:
-            - node_modules
-
 
 workflows:
   build:
