--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ commands:
       Run tests using Jest
     steps:
       - run:
-          command: npm run test --ci --runInBand --reporters=default --reporters=jest-junit
+          command: npm run test:ci
           environment:
             JEST_JUNIT_OUTPUT: reports/junit/js-test-results.xml
           name: Run tests with JUnit as reporter
