--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,16 +27,11 @@ commands:
     steps:
       - run:
           command: npm run test:ci
-          environment:
-            JEST_JUNIT_OUTPUT: reports/junit/js-test-results.xml
           name: Run tests with JUnit as reporter
       - run:
           command: ls -l
       - store_test_results:
-          path: reports
-      - store_artifacts:
-          path: /tmp/reports/junit
-
+          path: junit.xml
 
 jobs:
   build-job:
