--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,6 +42,9 @@ commands:
           arguments: |
             --acl public-read \
             --cache-control "max-age=86400"
+          aws-access-key-id: $AWS_ACCESS_KEY_ID
+          aws-region: us-west-1
+          aws-secret-access-key: $AWS_SECRET_ACCESS_KEY
           from: build
           to: 's3:/react-deploy-pipeline'
 
@@ -61,4 +64,5 @@ workflows:
   build:
     jobs:
       - build-job
+          context: S3 Creds
 
