--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,7 +46,7 @@ commands:
           aws-region: AWS_REGION
           aws-secret-access-key: AWS_SECRET_ACCESS_KEY
           from: build
-          to: 's3:/react-deploy-pipeline'
+          to: 's3://react-deploy-pipeline'
 
 jobs:
   build-job:
